Fix homepage status icon alignment

--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -246,11 +246,14 @@ p, li {
   width: 2.25rem;
   height: 2.25rem;
   border-radius: 999px;
-  display: inline-flex;
+  display: flex;
   align-items: center;
   justify-content: center;
   font-size: 1rem;
   font-weight: 800;
+  line-height: 1;
+  text-align: center;
+  place-self: start;
 }
 
 .result-item--done {
